# server/controller/customerController.js
@@ -10,6 +10,8 @@ const {
 const {
   forgetPasswordEmailBody,
 } = require("../lib/email-sender/templates/forget-password");
+const mongoose = require("mongoose");
+const { ObjectId } = mongoose.Types;
 
 const verifyEmailAddress = async (req, res) => {
   const isAdded = await Customer.findOne({ email: req.body.email });
@@ -311,13 +313,14 @@ const updateSubscriptionActive = async (req, res) => {
   try {
     let { userId, productId } = req.body;
     if (!userId) throw Error("Id not Found");
-
     const updatedCustomer = await Customer.findByIdAndUpdate(
-      userId,
+      { _id: userId },
       {
         $addToSet: {
-          "subscriptionType.status": "Active",
-          "subscriptionType.product": productId,
+          subscriptionType: {
+            status: "Active",
+            product: productId,
+          },
         },
       },
       { new: true }
@@ -339,25 +342,30 @@ const updateSubscriptionActive = async (req, res) => {
     });
   }
 };
-
 const updateSubscriptionInactive = async (req, res) => {
   try {
     let { productId } = req.body;
-    if (!id) throw Error("Id not Found");
+    if (!productId) throw Error("Id not Found");
 
-    const updatedCustomer = await Customer.findByIdAndUpdate(
-      { "subscriptionType.product": productId },
+    const updatedCustomer = await Customer.findOneAndUpdate(
       {
-        $set: {
-          "subscriptionType.status": "Inactive",
+        "subscriptionType.product": productId,
+        "subscriptionType.status": "Active",
+      },
+      {
+        $pull: {
+          subscriptionType: {
+            product: productId,
+            status: "Active",
+          },
         },
       },
       { new: true }
     );
-      
+
     if (!updatedCustomer) {
       return res.status(404).send({
-        message: "Customer not found",
+        message: "Customer not found or product is not active",
       });
     }
 
